Add menu bar  and ability to theme change (not working ..)

--- a/WPF.Quickstart.Server/WPF.Quickstart.Server.csproj
+++ b/WPF.Quickstart.Server/WPF.Quickstart.Server.csproj
@@ -60,6 +60,9 @@
   <PropertyGroup>
     <SignManifests>true</SignManifests>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Common.Logging">
       <HintPath>..\packages\Common.Logging.2.0.0\lib\2.0\Common.Logging.dll</HintPath>
@@ -128,6 +131,9 @@
       <Project>{9ee8ca9e-1ed5-41e1-a67e-6b6f39acc5c5}</Project>
       <Name>WPFQuickstart.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
