--- a/WPF.QuickStart.UI/WPF.QuickStart.UI.csproj
+++ b/WPF.QuickStart.UI/WPF.QuickStart.UI.csproj
@@ -112,6 +112,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.0.14.0.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -126,6 +127,7 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WindowsFormsIntegration" />
     <Reference Include="WpfAnimatedGif, Version=1.4.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\WpfAnimatedGif.1.4.4\lib\net\WpfAnimatedGif.dll</HintPath>
@@ -207,6 +209,9 @@
     </Compile>
     <Compile Include="Views\Common\Controls\TextBoxWatermarked.cs" />
     <Compile Include="Views\Common\Controls\Yahoo\YahooInputControl.cs" />
+    <Compile Include="Views\Twitter\TwitterSearchInterop.xaml.cs">
+      <DependentUpon>TwitterSearchInterop.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Flyouts\FlyoutLeftView.xaml.cs">
       <DependentUpon>FlyoutLeftView.xaml</DependentUpon>
     </Compile>
@@ -247,6 +252,10 @@
     <Page Include="Resources\Shared.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\Twitter\TwitterSearchInterop.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Flyouts\FlyoutLeftView.xaml">
       <SubType>Designer</SubType>
@@ -438,6 +447,7 @@
     <Resource Include="Images\windows8.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(XamlSpyInstallPath)MSBuild\FirstFloor.XamlSpy.WPF.targets" Condition="'$(XamlSpyInstallPath)' != '' and '$(Configuration)' == 'DEBUG'" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
