Add NYTimes API

--- a/WPF.QuickStart.UI/App.config
+++ b/WPF.QuickStart.UI/App.config
@@ -14,6 +14,7 @@
     <add key="Twitter.oAuth.ConsumerKey" value="GjWlZHpNx4L8N7uIIawAEN4aJ" />
     <add key="Twitter.oAuth.ConsumerSecret" value="OkKgXrxwe1C3UBBmCgGDXB0Y1OVw1zwBfKALweZAoXwE18Xkxz" />
     <add key="Twitter.oAuth.ApiUrl" value="https://api.twitter.com/oauth2/token" />
+    <add key="Nytimes.Articles.Search.ApiKey" value="934cf916cb79fb35082225c6b7229be9:4:69888635" />
   </appSettings>
 
   <runtime>
