--- a/WPF.Quickstart.Model/WPF.Quickstart.Model.csproj
+++ b/WPF.Quickstart.Model/WPF.Quickstart.Model.csproj
@@ -53,6 +53,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NYTimes\NYTimesResults.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
