--- a/WPF.QuickStart.UI/WPF.QuickStart.UI.csproj
+++ b/WPF.QuickStart.UI/WPF.QuickStart.UI.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Utils\TwitterHelperWrapper.cs" />
     <Compile Include="ViewModels\Flyouts\FlyoutLeftViewModel.cs" />
     <Compile Include="ViewModels\Flyouts\FlyoutBaseViewModel.cs" />
+    <Compile Include="ViewModels\NYTimes\NewsViewModel.cs" />
     <Compile Include="ViewModels\WinOs\WinOsChildViewModel.cs" />
     <Compile Include="ViewModels\WinOs\WinOsViewModel.cs" />
     <Compile Include="ViewModels\Yahoo\ChildTabYahooViewModel.cs" />
@@ -252,6 +253,10 @@
     <Page Include="Resources\Shared.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\NYTimes\NewsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Twitter\TwitterSearchInterop.xaml">
       <SubType>Designer</SubType>
